welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:6: error: not found: type stepper1
    if (13 <= nbrs[stepper1] && nbrs[stepper1] <= 19)
                   ^countTeen:6: error: variable nbrs of type List[Int] does not take type parameters.
    if (13 <= nbrs[stepper1] && nbrs[stepper1] <= 19)
                  ^countTeen:6: error: not found: type stepper1
    if (13 <= nbrs[stepper1] && nbrs[stepper1] <= 19)
                                     ^countTeen:6: error: variable nbrs of type List[Int] does not take type parameters.
    if (13 <= nbrs[stepper1] && nbrs[stepper1] <= 19)
                                    ^